// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkFormValidation should render correctly 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": "auto",
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <div
      className="bpk-form-validation__container"
    >
      <div
        className="bpk-form-validation bpk-form-validation--appear"
        id="my-form-validation"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.0625rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-form-validation__icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5zM12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18zm1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
            />
          </svg>
        </span>
        A validation message.
      </div>
    </div>
  </div>
</div>
`;

exports[`BpkFormValidation should render correctly with "expanded" equal to false 1`] = `
<div
  onTransitionEnd={[Function]}
  style={
    Object {
      "MozTransition": "height 200ms ease ",
      "OTransition": "height 200ms ease ",
      "WebkitTransition": "height 200ms ease ",
      "height": 0,
      "msTransition": "height 200ms ease ",
      "overflow": "visible",
      "transition": "height 200ms ease ",
    }
  }
>
  <div>
    <div
      className="bpk-form-validation__container"
    >
      <div
        className="bpk-form-validation"
        id="my-form-validation"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.0625rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-form-validation__icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1.5A10.5 10.5 0 1 0 22.5 12 10.5 10.5 0 0 0 12 1.5zM12 18a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 12 18zm1.5-6a1.5 1.5 0 0 1-3 0V7.5a1.5 1.5 0 0 1 3 0z"
            />
          </svg>
        </span>
        A validation message.
      </div>
    </div>
  </div>
</div>
`;
